bk_ida/gobmkida/c0/make_dragons
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/make_dragons/src/engine/dragon.c:782:42: error: use of undeclared identifier 'dragon_data'
memcpy( dd, &dragon[dd->origin], sizeof( dragon_data)); 
                                         ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/make_dragons/src/engine/dragon.c:916:46: error: use of undeclared identifier 'dragon_data'
memcpy( dd_0, &dragon[dd_0->origin], sizeof( dragon_data)); 
                                             ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/make_dragons/src/engine/dragon.c:995:46: error: use of undeclared identifier 'dragon_data'
memcpy( dd_1, &dragon[dd_1->origin], sizeof( dragon_data)); 
                                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/make_dragons/src/obj/1/dragon.o] Error 1
